# file-integrity-monitor

./: LICENSE  README.md  monitor.py  pyproject.toml
examples/: config.json
fim/: cli.py
tests/: test_basics.py
